barra nav y espacios

--- a/detail-album.html
+++ b/detail-album.html
@@ -8,11 +8,10 @@
     <link  class="logo"rel="icon" href="img/arriba.png" type="image/png" />
     <title>Detalles del Álbum</title>
 </head>
-
 <body>
     <header class="responsiveheader">
         <section class="cajainicio">
-            <nav class="header-items">
+            <article class="header-items">
                 <article class="BarraDeBusqueda">
                         <article class="menu">
                             <a href="index.html"><img class="logo" src="./img/soundd1.png" alt="logo"></a>
@@ -22,24 +21,23 @@
                             <a href="canciones.html" class="barratexto">Canciones</a>
                             <a href="playlists.html" class="barratexto">Playlists</a>
                             <article class="icperfil">
-                               <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
+                               <a href="perfil.html"><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
                             </article> 
                             <form action="search-results.html" method="GET" class="buscar">
-                               <input id= "ba" type="text" name="search" placeholder = "Search">
+                               <input type="text" name="search" placeholder = "¿Qué estás buscando?">
                                <button type="submit" class="button">Buscar</button>
                             </form>
-                       
                         </article>
                 </article>
-            </nav>
+            </article>
         </section>
     </header>
     <main>
         <section class="detallealbum">
-                <h1>Justice</h1>
-                <img src="./img/justin-bieber-justice.jpeg" alt="" class="fotoj"> 
-                <p>Justice es el sexto álbum de estudio del cantante canadiense<a href="https://www.instagram.com/justinbieber/" class="instajustin"> Justin Bieber</a>. Se lanzó el 19 de marzo de 2021 a través de Def Jam Recordings.Es el primer álbum del artista en contener la etiqueta de Parental Advisory por contenido explícito. Se lanzaron previamente varios sencillos para promocionar el álbum, incluidos «Holy», «Lonely», «Anyone» y «Hold On».</p>
-                <iframe class="videoj"width="560" height="315" src="https://www.youtube.com/embed/p4w5Tv1yIlA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h1>Justice</h1>
+            <img src="./img/justin-bieber-justice.jpeg" alt="" class="fotoj"> 
+            <p>Justice es el sexto álbum de estudio del cantante canadiense<a href="https://www.instagram.com/justinbieber/" class="instajustin"> Justin Bieber</a>. Se lanzó el 19 de marzo de 2021 a través de Def Jam Recordings.Es el primer álbum del artista en contener la etiqueta de Parental Advisory por contenido explícito. Se lanzaron previamente varios sencillos para promocionar el álbum, incluidos «Holy», «Lonely», «Anyone» y «Hold On».</p>
+            <iframe class="videoj"width="560" height="315" src="https://www.youtube.com/embed/p4w5Tv1yIlA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
     </main>
     <footer class="responsivefooter">
