--- a/detail-genres.html
+++ b/detail-genres.html
@@ -11,7 +11,7 @@
 <body class="detallesg">
     <header class="responsiveheader">
         <section class="cajainicio">
-            <nav class="header-items">
+            <article class="header-items">
                 <article class="BarraDeBusqueda">
                         <article class="menu">
                             <a href="index.html"><img class="logo" src="./img/soundd1.png" alt="logo"></a>
@@ -21,38 +21,37 @@
                             <a href="canciones.html" class="barratexto">Canciones</a>
                             <a href="playlists.html" class="barratexto">Playlists</a>
                             <article class="icperfil">
-                               <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
+                               <a href="perfil.html"><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
                             </article> 
                             <form action="search-results.html" method="GET" class="buscar">
-                               <input id= "ba" type="text" name="search" placeholder = "Search">
+                               <input type="text" name="search" placeholder = "¿Qué estás buscando?">
                                <button type="submit" class="button">Buscar</button>
                             </form>
-                       
                         </article>
                 </article>
-            </nav>
+            </article>
         </section>
     </header>
     <main>
-            <section class="detallegenero">
-                        <h1 class="pag">Latino</h1>
-                        <img src="./img/latin.jpeg" alt="" class="fotoa"> 
-                        <p>El "pop" latino​ es un género de música pop que tiene influencia latina, generalmente se aplica a la música originaria de Latinoamérica, pero también puede ser aplicada a la música pop de cualquier parte del mundo de habla derivados directamente del latín. El pop latino suele estar cantado en español, inglés y portugués. Además, muchos artistas internacionales de Francia e Italia a menudo cantan en español para atraer al público de habla hispana.</p>
-                        <iframe class="videoj"width="560" height="315" src="https://www.youtube.com/embed/GhfotMfHH3s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-            </section>
-
-        </main> 
-        <footer class="responsivefooter">
-            <section class="footer">
-                <article class="seguinos">
-                    <a href="https://www.instagram.com/soundnow_/"><img src="./img/insta.png" alt="instagram" class="instagram"></a>
-                </article>
-                <article class="nombre"> 
-                    <p>Hania Achaval, Justina Basombrio, Malena Bensadon </p>
-                </article>
-                <article> <img class="footerpic" src="./img/footer.png" alt="">
-                </article>
-            </section>
-        </footer>
+        <section class="detallegenero">
+            <h1 class="pag">Latino</h1>
+            <img src="./img/latin.jpeg" alt="" class="fotoa"> 
+            <p>El "pop" latino​ es un género de música pop que tiene influencia latina, generalmente se aplica a la música originaria de Latinoamérica, pero también puede ser aplicada a la música pop de cualquier parte del mundo de habla derivados directamente del latín. El pop latino suele estar cantado en español, inglés y portugués. Además, muchos artistas internacionales de Francia e Italia a menudo cantan en español para atraer al público de habla hispana.</p>
+            <iframe class="videoj"width="560" height="315" src="https://www.youtube.com/embed/GhfotMfHH3s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+        </section>
+    </main> 
+    <footer class="responsivefooter">
+         <section class="footer">
+            <article class="seguinos">
+                <a href="https://www.instagram.com/soundnow_/"><img src="./img/insta.png" alt="instagram" class="instagram"></a>
+            </article>
+            <article class="nombre"> 
+                <p>Hania Achaval, Justina Basombrio, Malena Bensadon </p>
+            </article>
+            <article> 
+                <img class="footerpic" src="./img/footer.png" alt="">
+            </article>
+        </section>
+    </footer>
 </body>
 </html>
