--- a/generos.html
+++ b/generos.html
@@ -12,7 +12,7 @@
 <body>
     <header class="responsiveheader">
         <section class="cajainicio">
-            <nav class="header-items">
+            <article class="header-items">
                 <article class="BarraDeBusqueda">
                         <article class="menu">
                             <a href="index.html"><img class="logo" src="./img/soundd1.png" alt="logo"></a>
@@ -22,23 +22,22 @@
                             <a href="canciones.html" class="barratexto">Canciones</a>
                             <a href="playlists.html" class="barratexto">Playlists</a>
                             <article class="icperfil">
-                               <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
+                               <a href="perfil.html"><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
                             </article> 
                             <form action="search-results.html" method="GET" class="buscar">
-                               <input id= "ba" type="text" name="search" placeholder = "Search">
+                               <input type="text" name="search" placeholder = "¿Qué estás buscando?">
                                <button type="submit" class="button">Buscar</button>
                             </form>
-                       
                         </article>
                 </article>
-            </nav>
+            </article>
         </section>
     </header>
     <main>          
         <section class="acaja">
             <h2 class="pag"> Géneros</h2>
             <article class="listas">
-                    <img class="albumpic" src="./img/hmj2.png" alt="">
+                <img class="albumpic" src="./img/hmj2.png" alt="">
                 <ul class="caja">
                      <li> 
                         <a href="./detail-album.html" class="names">LATINO</a> 
@@ -71,19 +70,18 @@
                 </ul>
             </article>
        </section>
-    
     </main>
-<footer class="responsivefooter">
-    <section class="footer">
-        <article class="seguinos">
-            <a href="https://www.instagram.com/soundnow_/"><img src="./img/insta.png" alt="instagram" class="instagram"></a>
-        </article>
-        <article class="nombre"> 
-            <p>Hania Achaval, Justina Basombrio, Malena Bensadon </p>
-        </article>
-        <article> <img class="footerpic" src="./img/footer.png" alt="">
-        </article>
-    </section>
-</footer>
-        </body>
-        </html>
+    <footer class="responsivefooter">
+        <section class="footer">
+            <article class="seguinos">
+                <a href="https://www.instagram.com/soundnow_/"><img src="./img/insta.png" alt="instagram" class="instagram"></a>
+            </article>
+            <article class="nombre"> 
+                <p>Hania Achaval, Justina Basombrio, Malena Bensadon </p>
+            </article>
+            <article> <img class="footerpic" src="./img/footer.png" alt="">
+            </article>
+        </section>
+    </footer>
+</body>
+</html>
