--- a/search-results.html
+++ b/search-results.html
@@ -11,7 +11,7 @@
 <body>
     <header class="responsiveheader">
         <section class="cajainicio">
-            <nav class="header-items">
+            <article class="header-items">
                 <article class="BarraDeBusqueda">
                         <article class="menu">
                             <a href="index.html"><img class="logo" src="./img/soundd1.png" alt="logo"></a>
@@ -21,19 +21,17 @@
                             <a href="canciones.html" class="barratexto">Canciones</a>
                             <a href="playlists.html" class="barratexto">Playlists</a>
                             <article class="icperfil">
-                               <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
+                               <a href="perfil.html"><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
                             </article> 
                             <form action="search-results.html" method="GET" class="buscar">
-                               <input id= "ba" type="text" name="search" placeholder = "Search">
+                               <input type="text" name="search" placeholder = "¿Qué estás buscando?">
                                <button type="submit" class="button">Buscar</button>
                             </form>
-                       
                         </article>
                 </article>
-            </nav>
+            </article>
         </section>
     </header>
-    
     <main>
         <section>
             <h2 class= "titulos">Oops! No se encontaron resultados para tu búsqueda</h2>
@@ -47,7 +45,6 @@
             </ul>
         </section>
     </main>
-
     <footer class="responsivefooter">
         <section class="footer">
             <article class="seguinos">
@@ -60,5 +57,5 @@
             </article>
         </section>
     </footer>
-        </body>
-        </html>
+</body>
+</html>
