--- a/artistas.html
+++ b/artistas.html
@@ -11,7 +11,7 @@
 <body>
     <header class="responsiveheader">
         <section class="cajainicio">
-            <nav class="header-items">
+            <article class="header-items">
                 <article class="BarraDeBusqueda">
                         <article class="menu">
                             <a href="index.html"><img class="logo" src="./img/soundd1.png" alt="logo"></a>
@@ -21,100 +21,96 @@
                             <a href="canciones.html" class="barratexto">Canciones</a>
                             <a href="playlists.html" class="barratexto">Playlists</a>
                             <article class="icperfil">
-                               <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
+                               <a href="perfil.html"><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
                             </article> 
                             <form action="search-results.html" method="GET" class="buscar">
-                               <input id= "ba" type="text" name="search" placeholder = "Search">
+                               <input type="text" name="search" placeholder = "¿Qué estás buscando?">
                                <button type="submit" class="button">Buscar</button>
                             </form>
-                       
                         </article>
                 </article>
-            </nav>
+            </article>
         </section>
-    </header>
-
-<main>
-    <section class="acaja">
-                <h2 class="pag">Artistas</h2>
-
-                <article class="listas">
-    <img class="albumpic" src="./img/hmj1.png" alt="">
-                    <article class="caja">
-                        <a href="./detail-artist.html" class="names">Justin Bieber</a>
-                        <a href="./detail-artist.html"><img class="fotos" src="./img/bieber.jpg" alt=""></a>
-                        <ul class="bobtopfive">
-                            <p>TOP #5</p>
-                                <li>Sorry</li>
-                                <li>Baby</li>
-                                <li>What do you mean?</li>
-                                <li>Love Yourself</li>
-                                <li>Boyfriend</li>
+    </header> 
+    <main>
+         <section class="acaja">
+            <h2 class="pag">Artistas</h2>
+            <article class="listas">
+                <img class="albumpic" src="./img/hmj1.png" alt="">
+                <article class="caja">
+                    <a href="./detail-artist.html" class="names">Justin Bieber</a>
+                    <a href="./detail-artist.html"><img class="fotos" src="./img/bieber.jpg" alt=""></a>
+                    <ul class="bobtopfive">
+                        <p>TOP #5</p>
+                        <li>Sorry</li>
+                        <li>Baby</li>
+                        <li>What do you mean?</li>
+                        <li>Love Yourself</li>
+                        <li>Boyfriend</li>
                         </ul>
-                    </article>
-                    <article class="caja">
-                        <a href="./detail-artist.html" class="names">Tini</a>
-                        <a href="./detail-artist.html"><img class="fotos" src="./img/retratotini2.jpg" alt=""></a>
-                        <ul class="bobtopfive">
-                                 <p>TOP #5</p>
-                                <li>Fresa</li>
-                                <li>Sad Song</li>
-                                <li>Suéltate el pelo</li>
-                                <li>Consejo de amor</li>
-                                <li>Quiero volver</li>
-                        </ul>
-                    </article>
-                    <article class="caja">
-                        <a href="./detail-artist.html" class="names">Bob Marley</a>
-                        <a href="./detail-artist.html"><img class="fotos" src="./img/bob-marley.jpg" alt=""></a>
-                        <ul class="bobtopfive">
-                            <p>TOP #5</p>
-                            <li>Three Little Birds</li>
-                            <li>Could You Be Loved</li>
-                            <li>Is This Love</li>
-                            <li>Jamming</li>
-                            <li>One Love / People Get Ready</li>
-                    </ul>
-                    </article>
-                    <article class="caja">
-                        <a href="./detail-artist.html" class="names">Ricky Martin</a>
-                        <a href="./detail-artist.html"><img class="fotos" src="./img/ricky2.jpg" alt=""></a>
-                        <ul class="bobtopfive">
-                            <p>TOP #5</p>
-                            <li>Livin' la vida loca</li>
-                            <li>La copa de la vida</li>
-                            <li>La Mordidita</li>
-                            <li>Maria</li>
-                            <li>Vente pa'ca</li>
-                    </ul>
-                    </article>
-                    <article class="caja">
-                        <a href="./detail-artist.html" class="names">Harry Styles</a>
-                        <a href="./detail-artist.html"><img class="fotos" src="./img/harry2.png" alt=""></a>
-                        <ul class="bobtopfive">
-                            <p>TOP #5</p>
-                            <li>Adore You</li>
-                            <li>Falling</li>
-                            <li>Lights Up</li>
-                            <li>Sign of the Times</li>
-                            <li>Watermelon Sugar</li>
-                        </ul>
-                    </article>
                 </article>
-
+                <article class="caja">
+                    <a href="./detail-artist.html" class="names">Tini</a>
+                    <a href="./detail-artist.html"><img class="fotos" src="./img/retratotini2.jpg" alt=""></a>
+                    <ul class="bobtopfive">
+                        <p>TOP #5</p>
+                        <li>Fresa</li>
+                        <li>Sad Song</li>
+                        <li>Suéltate el pelo</li>
+                        <li>Consejo de amor</li>
+                        <li>Quiero volver</li>
+                    </ul>
+                </article>
+                <article class="caja">
+                    <a href="./detail-artist.html" class="names">Bob Marley</a>
+                    <a href="./detail-artist.html"><img class="fotos" src="./img/bob-marley.jpg" alt=""></a>
+                    <ul class="bobtopfive">
+                        <p>TOP #5</p>
+                        <li>Three Little Birds</li>
+                        <li>Could You Be Loved</li>
+                        <li>Is This Love</li>
+                        <li>Jamming</li>
+                        <li>One Love / People Get Ready</li>
+                    </ul>
+                </article>
+                <article class="caja">
+                    <a href="./detail-artist.html" class="names">Ricky Martin</a>
+                    <a href="./detail-artist.html"><img class="fotos" src="./img/ricky2.jpg" alt=""></a>
+                    <ul class="bobtopfive">
+                        <p>TOP #5</p>
+                        <li>Livin' la vida loca</li>
+                        <li>La copa de la vida</li>
+                        <li>La Mordidita</li>
+                        <li>Maria</li>
+                        <li>Vente pa'ca</li>
+                    </ul>
+                </article>
+                <article class="caja">
+                    <a href="./detail-artist.html" class="names">Harry Styles</a>
+                    <a href="./detail-artist.html"><img class="fotos" src="./img/harry2.png" alt=""></a>
+                    <ul class="bobtopfive">
+                        <p>TOP #5</p>
+                        <li>Adore You</li>
+                        <li>Falling</li>
+                        <li>Lights Up</li>
+                        <li>Sign of the Times</li>
+                        <li>Watermelon Sugar</li>
+                    </ul>
+                </article>
+             </article>
         </section>
-            </main>
-            <footer class="responsivefooter">
-                <section class="footer">
-                    <article class="seguinos">
-                        <a href="https://www.instagram.com/soundnow_/"><img src="./img/insta.png" alt="instagram" class="instagram"></a>
-                    </article>
-                    <article class="nombre"> 
-                        <p>Hania Achaval, Justina Basombrio, Malena Bensadon </p>
-                    </article>
-                    <article> <img class="footerpic" src="./img/footer.png" alt="">
-                    </article>
-                </section>
-            </footer>
-        </body>
-        </html>
+    </main>
+    <footer class="responsivefooter">
+        <section class="footer">
+            <article class="seguinos">
+                <a href="https://www.instagram.com/soundnow_/"><img src="./img/insta.png" alt="instagram" class="instagram"></a>
+            </article>
+            <article class="nombre"> 
+                <p>Hania Achaval, Justina Basombrio, Malena Bensadon </p>
+            </article>
+            <article> <img class="footerpic" src="./img/footer.png" alt="">
+            </article>
+        </section>
+    </footer>
+</body>
+</html>
