--- a/detail-track.html
+++ b/detail-track.html
@@ -11,7 +11,7 @@
 <body>
     <header class="responsiveheader">
         <section class="cajainicio">
-            <nav class="header-items">
+            <article class="header-items">
                 <article class="BarraDeBusqueda">
                         <article class="menu">
                             <a href="index.html"><img class="logo" src="./img/soundd1.png" alt="logo"></a>
@@ -21,36 +21,34 @@
                             <a href="canciones.html" class="barratexto">Canciones</a>
                             <a href="playlists.html" class="barratexto">Playlists</a>
                             <article class="icperfil">
-                               <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
+                               <a href="perfil.html"><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
                             </article> 
                             <form action="search-results.html" method="GET" class="buscar">
-                               <input id= "ba" type="text" name="search" placeholder = "Search">
+                               <input type="text" name="search" placeholder = "¿Qué estás buscando?">
                                <button type="submit" class="button">Buscar</button>
                             </form>
-                       
                         </article>
                 </article>
-            </nav>
+            </article>
         </section>
     </header>
     <main>
-      <section class="detallestrack">
-              <h3 class="names">Peaches</h3> 
-              <iframe class="videoj"width="560" height="315" src="https://www.youtube.com/embed/tQ0yjYUFKAE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <ul>
+        <section class="detallestrack">
+            <h3 class="names">Peaches</h3> 
+            <iframe class="videoj"width="560" height="315" src="https://www.youtube.com/embed/tQ0yjYUFKAE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <ul>
                 <li class="names">Artista: <a href="./detail-artist.html" class="names">Justin Bieber</a></li>
                 <li>Álbum:<a href="./detail-album.html" class="instajustin">Justice</a></li> 
                 <li>Artista invitado: Daniel Caesar, Giveon</li>
                 <li>Fecha de lanzamiento: 2021</li>
                 <li>
-                        <audio class="reproductor"src="musica/ musik.mp3" preload="Cancion" controls></audio>
+                    <audio class="reproductor"src="musica/ musik.mp3" preload="Cancion" controls></audio>
                 </li>
                 <li>
-                      <a href="./playlists.html"><img class="fav2"src="./img/fav2.jpg" alt=""></a>
+                    <a href="./playlists.html"><img class="fav2"src="./img/fav2.jpg" alt=""></a>
                 </li>
-        </ul>
-        
-      </section>
+            </ul>
+        </section>
     </main>
     <footer class="responsivefooter">
         <section class="footer">
