--- a/perfil.html
+++ b/perfil.html
@@ -11,7 +11,7 @@
 <body>
     <header class="responsiveheader">
         <section class="cajainicio">
-            <nav class="header-items">
+            <article class="header-items">
                 <article class="BarraDeBusqueda">
                         <article class="menu">
                             <a href="index.html"><img class="logo" src="./img/soundd1.png" alt="logo"></a>
@@ -21,49 +21,41 @@
                             <a href="canciones.html" class="barratexto">Canciones</a>
                             <a href="playlists.html" class="barratexto">Playlists</a>
                             <article class="icperfil">
-                               <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
+                               <a href="perfil.html"><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
                             </article> 
                             <form action="search-results.html" method="GET" class="buscar">
-                               <input id= "ba" type="text" name="search" placeholder = "Search">
+                               <input type="text" name="search" placeholder = "¿Qué estás buscando?">
                                <button type="submit" class="button">Buscar</button>
                             </form>
-                       
                         </article>
                 </article>
-            </nav>
+            </article>
         </section>
     </header>
     <main class="formulario">
-
         <article class="slider">
             <h3 class= "volverainicio">¡Bienvenido a tu perfil de Sound-Now!</h3>
             <ul>
-                    <li><img src="img/auriculares.jpg" alt=""></li>
-                    <li><img src="img/fiesta.jpg" alt=""></li>
-                    <li><img src="img/parlante.jpg" alt=""></li>
-                    <li><img src="img/colores.jpg" alt=""></li>
+                <li><img src="img/auriculares.jpg" alt=""></li>
+                <li><img src="img/fiesta.jpg" alt=""></li>
+                <li><img src="img/parlante.jpg" alt=""></li>
+                <li><img src="img/colores.jpg" alt=""></li>
             </ul>   
         </article>
-
         <form action="" method="GET"> 
             <article>
                     <input type="text" name="user" placeholder="Nombre de Usuario" class="nombreu">
             </article>
-
             <article>
                 <input type="mail" name="mail" placeholder="Correo electrónico" class="mail">
             </article>
-
             <article>
                 <input type="contraseña" name="ontraseña" placeholder="Contraseña" class="contrasena">
             </article>
-
             <button class="iniciars" type="submit" id="boton">Inicia Sesión</button>
-            
-            </form> 
-           <a href="index.html"class="volverainicio">Volver a inicio</a>
+        </form> 
+        <a href="index.html"class="volverainicio">Volver a inicio</a>
     </main>
-
     <footer class="responsivefooter">
         <section class="footer">
             <article class="seguinos">
@@ -76,4 +68,5 @@
             </article>
         </section>
     </footer>
+</body>
 </html>
