--- a/perfil.html
+++ b/perfil.html
@@ -42,7 +42,7 @@
                 <li><img src="img/colores.jpg" alt=""></li>
             </ul>   
         </article>
-        <form action="" method="GET"> 
+        <form action="perfil.html" method="GET"> 
             <article>
                     <input type="text" name="user" placeholder="Nombre de Usuario" class="nombreu">
             </article>
