--- a/perfil.html
+++ b/perfil.html
@@ -50,7 +50,7 @@
                 <input type="mail" name="mail" placeholder="Correo electrónico" class="mail">
             </article>
             <article>
-                <input type="contraseña" name="ontraseña" placeholder="Contraseña" class="contrasena">
+                <input type="contraseña" name="contraseña" placeholder="Contraseña" class="contrasena">
             </article>
             <button class="iniciars" type="submit" id="boton">Inicia Sesión</button>
         </form> 
