--- a/index.html
+++ b/index.html
@@ -36,40 +36,11 @@
         <section class="container">
             <img class="introhome" src="./img/intro.png" alt="">
             <h2 class="titulos"><a href="canciones.html" class="barratexto">Canciones</a></h2>
-               <ul class="listas">
-                <li class="caja">
-                    <a href="./detail-track.html"><img class="fotos" src="./img/peaches.jpeg" alt=""></a>
-                    <a href="./detail-track.html" class="names">Peaches</a> <a href="./playlists.html"></a>
-                    <a href="./detail-artist.html"class="names">by Justin Bieber </a>
-                    <a href="./playlists.html"><img class="favx"src="./img/fav.jpg" alt=""></a>
-                </li>
-                <li class="caja">
-                    <a href="./detail-track.html"><img class="fotos" src="./img/Alohamaluma.jpeg" alt=""></a>
-                    <a href="./detail-track.html" class="names">Aloha</a>
-                   <a href="./detail-artist.html"class="names">by Maluma</a>
-                   <a href="./playlists.html"><img class="favx"src="./img/fav.jpg" alt=""></a>
-                </li>
-                <li class="caja">
-                    <a href="./detail-track.html"><img class="fotos" src="./img/Eye-of-the-Tiger.jpeg" alt=""></a>
-                    <a href="./detail-track.html" class="names">Eye Of The Tiger</a> 
-                    <a href="./detail-artist.html"class="names">by Survior</a>
-                    <a href="./playlists.html"><img class="favx"src="./img/fav.jpg" alt=""></a>
-                </li>
-                <li class="caja">
-                    <a href="./detail-track.html"><img class="fotos" src="./img/bobmarleynwnc.jpg" alt=""></a>
-                    <a href="./detail-track.html" class="names">No Woman No Cry</a>
-                    <a href="./detail-artist.html"class="names">by Bob Marley</a>
-                    <a href="./playlists.html"><img class="favx"src="./img/fav.jpg" alt=""></a>
-                </li>
-                <li class="caja">
-                    <a href="./detail-track.html"><img class="fotos" src="./img/terminales.jpg" alt=""></a>
-                    <a href="./detail-track.html" class="names">Terminales</a>
-                   <a href="./detail-artist.html"class="names">by Cruzando el Charco</a>
-                   <a href="./playlists.html"><img class="favx"src="./img/fav.jpg" alt=""></a>
-                </li>
-            </ul> 
+               <ul class="listas track">
+                
+                </ul> 
             <h2 class="titulos"><a href="albumes.html" class="barratexto">Álbumes</a></h2>
-            <ul class="listas">
+            <ul class="listas albumes">
                  <li class="caja">
                     <a href="./detail-album.html"><img class="fotos" src="./img/x.jpg" alt=""></a>
                     <a href="./detail-album.html" class="names">x (Deluxe Version)</a>
@@ -97,7 +68,7 @@
                 </li>
             </ul>
             <h2 class="titulos"><a href="artistas.html" class="barratexto">Artistas</a></h2>
-            <ul class="listas">
+            <ul class="listas artistas">
                  <li class="caja">
                     <a href="./detail-artist.html" class="names">Justin Bieber</a>
                     <a href="./detail-artist.html"><img class="fotos" src="./img/bieber.jpg" alt=""></a>
