--- a/detail-album.html
+++ b/detail-album.html
@@ -34,6 +34,9 @@
     </header>
     <main>
         <section class="detallealbum">
+            <img src="" alt="" class="fotoj"> 
+            <h1 class = "title">Cancion: </h1>
+            <h2 class = "artist">Artista: </p>
             <iframe class="videoj"width="560" height="315" src="https://www.youtube.com/embed/p4w5Tv1yIlA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
     </main>
