--- a/canciones.html
+++ b/canciones.html
@@ -36,39 +36,10 @@
     <main>
         <section class="container">
             <h2 class="titulos">Canciones</h2>
-            <ul class="listas">
-                <img class="albumpic" src="./img/hmj3.png" alt="">
-                <li class="caja">
-                    <a href="./detail-track.html"><img class="fotos" src="./img/peaches.jpeg" alt=""></a>
-                    <a href="./detail-track.html" class="names">Peaches</a> <a href="./playlists.html"></a>
-                    <a href="./detail-artist.html"class="names">by Justin Bieber </a>
-                    <a href="./playlists.html"><img class="favx"src="./img/fav.jpg" alt=""></a>
-                </li>
-                <li class="caja">
-                    <a href="./detail-track.html"><img class="fotos" src="./img/Alohamaluma.jpeg" alt=""></a>
-                    <a href="./detail-track.html" class="names">Aloha</a>
-                   <a href="./detail-artist.html"class="names">by Maluma</a>
-                   <a href="./playlists.html"><img class="favx"src="./img/fav.jpg" alt=""></a>
-                </li>
-                <li class="caja">
-                    <a href="./detail-track.html"><img class="fotos" src="./img/Eye-of-the-Tiger.jpeg" alt=""></a>
-                    <a href="./detail-track.html" class="names">Eye Of The Tiger</a> 
-                    <a href="./detail-artist.html"class="names">by Survior</a>
-                    <a href="./playlists.html"><img class="favx"src="./img/fav.jpg" alt=""></a>
-                </li>
-                <li class="caja">
-                    <a href="./detail-track.html"><img class="fotos" src="./img/bobmarleynwnc.jpg" alt=""></a>
-                    <a href="./detail-track.html" class="names">No Woman No Cry</a>
-                    <a href="./detail-artist.html"class="names">by Bob Marley</a>
-                    <a href="./playlists.html"><img class="favx"src="./img/fav.jpg" alt=""></a>
-                </li>
-                <li class="caja">
-                    <a href="./detail-track.html"><img class="fotos" src="./img/terminales.jpg" alt=""></a>
-                    <a href="./detail-track.html" class="names">Terminales</a>
-                   <a href="./detail-artist.html"class="names">by Cruzando el Charco</a>
-                   <a href="./playlists.html"><img class="favx"src="./img/fav.jpg" alt=""></a>
-                </li>
-            </ul> 
+            <img class="albumpic" src="./img/hmj3.png" alt="">
+            <article class="listas">
+                
+            </article> 
         </section>
     </main>
     <footer class="responsivefooter">
@@ -83,5 +54,6 @@
             </article>
         </section>
     </footer>
+    <script src="js/canciones.js"></script>
 </body>
 </html>
