--- a/detail-track.html
+++ b/detail-track.html
@@ -34,20 +34,17 @@
     </header>
     <main>
         <section class="detallestrack">
-            <h3 class="names">Peaches</h3> 
-            <iframe class="videoj"width="560" height="315" src="https://www.youtube.com/embed/tQ0yjYUFKAE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <ul>
-                <li class="names">Artista: <a href="./detail-artist.html" class="names">Justin Bieber</a></li>
-                <li>Álbum:<a href="./detail-album.html" class="instajustin">Justice</a></li> 
-                <li>Artista invitado: Daniel Caesar, Giveon</li>
-                <li>Fecha de lanzamiento: 2021</li>
-                <li>
-                    <audio class="reproductor"src="musica/ musik.mp3" preload="Cancion" controls></audio>
-                </li>
-                <li>
-                    <a href="./playlists.html"><img class="fav2"src="./img/fav2.jpg" alt=""></a>
-                </li>
-            </ul>
+            <h2 class="track"> </h2> 
+            <img class="fotos"></img>
+       
+                <h3 class="names">Artista: <a href="./detail-artist.html" class="names"> </a></h3>
+                <h3>Álbum: <a href="./detail-album.html" class="instajustin"> </a></h3>
+                <h3><iframe title="deezer-widget" src="" width="100%" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media; clipboard-write"></iframe></h3>
+                <h3>
+                    <h3 class="names agregar" href="playlist.html"> Agregar a mí playlist</h3>
+                    <a class="names" href="./playlists.html">Ver Playlist</a>
+                    </h3>
+           
         </section>
     </main>
     <footer class="responsivefooter">
