--- a/generos.html
+++ b/generos.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
     <link  class="logo"rel="icon" href="img/arriba.png" type="image/png" />
-    <title>Géneros</title>
+    <title>Álbumes</title>
 </head>
-
 <body>
     <header class="responsiveheader">
         <section class="cajainicio">
@@ -33,7 +32,7 @@
             </article>
         </section>
     </header>
-    <main>          
+    <main>
         <section class="acaja">
             <h2 class="pag">Géneros</h2>
             <img class="albumpic" src="./img/hmj2.png" alt="">
@@ -54,5 +53,6 @@
             </article>
         </section>
     </footer>
+    <script src="./js/albumes.js"></script>
 </body>
 </html>
