--- a/generos.html
+++ b/generos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
     <link  class="logo"rel="icon" href="img/arriba.png" type="image/png" />
-    <title>Álbumes</title>
+    <title>Géneros</title>
 </head>
 <body>
     <header class="responsiveheader">
@@ -53,6 +53,6 @@
             </article>
         </section>
     </footer>
-    <script src="./js/albumes.js"></script>
+    <script src="./js/generos.js"></script>
 </body>
 </html>
