--- a/artistas.html
+++ b/artistas.html
@@ -36,66 +36,9 @@
          <section class="acaja">
             <h2 class="pag">Artistas</h2>
             <article class="listas">
-                <img class="albumpic" src="./img/hmj1.png" alt="">
+                <img class="albumpic" src="./img/hmj1.png" alt=""></img>
                 <article class="caja">
-                    <a href="./detail-artist.html" class="names">Justin Bieber</a>
-                    <a href="./detail-artist.html"><img class="fotos" src="./img/bieber.jpg" alt=""></a>
-                    <ul class="bobtopfive">
-                        <p>TOP #5</p>
-                        <li>Sorry</li>
-                        <li>Baby</li>
-                        <li>What do you mean?</li>
-                        <li>Love Yourself</li>
-                        <li>Boyfriend</li>
-                        </ul>
-                </article>
-                <article class="caja">
-                    <a href="./detail-artist.html" class="names">Tini</a>
-                    <a href="./detail-artist.html"><img class="fotos" src="./img/retratotini2.jpg" alt=""></a>
-                    <ul class="bobtopfive">
-                        <p>TOP #5</p>
-                        <li>Fresa</li>
-                        <li>Sad Song</li>
-                        <li>Suéltate el pelo</li>
-                        <li>Consejo de amor</li>
-                        <li>Quiero volver</li>
-                    </ul>
-                </article>
-                <article class="caja">
-                    <a href="./detail-artist.html" class="names">Bob Marley</a>
-                    <a href="./detail-artist.html"><img class="fotos" src="./img/bob-marley.jpg" alt=""></a>
-                    <ul class="bobtopfive">
-                        <p>TOP #5</p>
-                        <li>Three Little Birds</li>
-                        <li>Could You Be Loved</li>
-                        <li>Is This Love</li>
-                        <li>Jamming</li>
-                        <li>One Love / People Get Ready</li>
-                    </ul>
-                </article>
-                <article class="caja">
-                    <a href="./detail-artist.html" class="names">Ricky Martin</a>
-                    <a href="./detail-artist.html"><img class="fotos" src="./img/ricky2.jpg" alt=""></a>
-                    <ul class="bobtopfive">
-                        <p>TOP #5</p>
-                        <li>Livin' la vida loca</li>
-                        <li>La copa de la vida</li>
-                        <li>La Mordidita</li>
-                        <li>Maria</li>
-                        <li>Vente pa'ca</li>
-                    </ul>
-                </article>
-                <article class="caja">
-                    <a href="./detail-artist.html" class="names">Harry Styles</a>
-                    <a href="./detail-artist.html"><img class="fotos" src="./img/harry2.png" alt=""></a>
-                    <ul class="bobtopfive">
-                        <p>TOP #5</p>
-                        <li>Adore You</li>
-                        <li>Falling</li>
-                        <li>Lights Up</li>
-                        <li>Sign of the Times</li>
-                        <li>Watermelon Sugar</li>
-                    </ul>
+                    
                 </article>
              </article>
         </section>
@@ -112,5 +55,6 @@
             </article>
         </section>
     </footer>
+    <script src="js/artistas.js"></script>
 </body>
 </html>
