--- a/detail-track.html
+++ b/detail-track.html
@@ -41,7 +41,7 @@
                 <h3>Álbum: <a href="./detail-album.html" class="instajustin"> </a></h3>
                 <h3><iframe title="deezer-widget" src="" width="100%" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media; clipboard-write"></iframe></h3>
                 <h3>
-                    <h3 class="names agregar" href="playlist.html"> Agregar a mí playlist</h3>
+                    <a class="names agregar" href=".playlists.html"> Agregar a mí playlist</a>
                     <a class="names" href="./playlists.html">Ver Playlist</a>
                     </h3>
            
