--- a/detail-track.html
+++ b/detail-track.html
@@ -35,9 +35,9 @@
     <main>
         <section class="detallestrack">
             <h2 class="track"> </h2> 
-            <img class="fotos"></img>
+            <img class="fotoa"></img>
        
-                <h3 class="names">Artista: <a href="./detail-artist.html" class="names"> </a></h3>
+                <h3 >Artista:<a href="./detail-artist.html" class="names"> </a></h3>
                 <h3>Álbum: <a href="./detail-album.html" class="instajustin"> </a></h3>
                 <h3><iframe title="deezer-widget" src="" width="100%" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media; clipboard-write"></iframe></h3>
                 <h3>
