fotos no pixeladas

--- a/detail-track.html
+++ b/detail-track.html
@@ -35,7 +35,7 @@
     <main>
         <section class="detallestrack">
             <h2 class="track"> </h2> 
-            <img class="fotoa"></img>
+            <img class="fotoaa"></img>
        
                 <h3 >Artista:<a href="./detail-artist.html" class="names"> </a></h3>
                 <h3>Álbum: <a href="./detail-album.html" class="instajustin"> </a></h3>
