--- a/detail-genres.html
+++ b/detail-genres.html
@@ -34,7 +34,9 @@
     </header>
     <main>
         <section class="detallegenero">
-        
+            <h1 class="pag"></h1>
+            <img class="fotoaa"></img>
+            <iframe class="videoj"width="560" height="315" src="" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
         </section>
     </main> 
     <footer class="responsivefooter">
