--- a/detail-album.html
+++ b/detail-album.html
@@ -35,8 +35,12 @@
     <main>
         <section class="detallealbum">
             <img src="" alt="" class="fotoj"> 
-            <h1 class = "title">Cancion: </h1>
-            <h2 class = "artist">Artista: </p>
+            <h2 class = "title"> Album: </h2>
+            <h2 class = "artist"> Artista: </h2>
+            <h2 class = "genre"> Genero: </h2>
+            <ul class = "listas">
+                <li class ="tracks"></li>
+            </ul>
             <iframe class="videoj"width="560" height="315" src="https://www.youtube.com/embed/p4w5Tv1yIlA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
     </main>
@@ -52,5 +56,6 @@
             </article>
         </section>
     </footer>
+    <script src="./js/detail-album.js"></script>
 </body>
 </html>
