--- a/detail-album.html
+++ b/detail-album.html
@@ -38,8 +38,9 @@
             <h2 class = "title"> Album: </h2>
             <h2 class = "artist"> Artista: </h2>
             <h2 class = "genre"> Genero: </h2>
-            <ul class = "listas">
-                <li class ="tracks"></li>
+            <h2 class = "date"> date: </h2>
+            <ul class = "tracks">
+                
             </ul>
             <iframe class="videoj"width="560" height="315" src="https://www.youtube.com/embed/p4w5Tv1yIlA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
