--- a/detail-album.html
+++ b/detail-album.html
@@ -38,7 +38,7 @@
             <h2 class = "title"> Album: </h2>
             <h2 class = "artist"> Artista: </h2>
             <h2 class = "genre"> Genero: </h2>
-            <h2 class = "date"> date: </h2>
+            <h2 class = "date"> Date: </h2>
             <ul class = "tracks">
                 
             </ul>
