--- a/search-results.html
+++ b/search-results.html
@@ -24,9 +24,10 @@
                                <a href="perfil.html"><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
                             </article> 
                             <form action="search-results.html" method="GET" class="buscar">
-                               <input type="text" name="search" placeholder = "¿Qué estás buscando?">
-                               <button type="submit" class="button">Buscar</button>
-                            </form>
+                                <input type="text" name="search" placeholder = "¿Qué estás buscando?">
+                                <button type="submit" class="button">Buscar</button>
+                                <p class= "aviso"></p>
+                             </form>
                         </article>
                 </article>
             </article>
@@ -57,5 +58,6 @@
             </article>
         </section>
     </footer>
+    <script src="js/search-results.js"></script>
 </body>
 </html>
