--- a/generos.html
+++ b/generos.html
@@ -26,6 +26,7 @@
                             <form action="search-results.html" method="GET" class="buscar">
                                <input type="text" name="search" placeholder = "¿Qué estás buscando?">
                                <button type="submit" class="button">Buscar</button>
+                               <p class= "aviso"></p>
                             </form>
                         </article>
                 </article>
