--- a/detail-genres.html
+++ b/detail-genres.html
@@ -37,7 +37,9 @@
         <section class="detallegenero">
             <h1 class="pag"></h1>
             <img class="fotoaa"></img>
-            <iframe class="videoj"width="560" height="315" src="" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+
+            <ol class="artistasg">
+            </ol>
         </section>
     </main> 
     <footer class="responsivefooter">
