--- a/detail-album.html
+++ b/detail-album.html
@@ -35,11 +35,18 @@
     </header>
     <main>
         <section class="detallealbum">
-            <img src="" alt="" class="fotoj"> 
-            <h2 class = "title"> Album: </h2>
-            <h2 class = "artist"> Artista: </h2>
-            <h2 class = "genre"> Genero: </h2>
-            <h2 class = "date"> Date: </h2>
+            <section class= "dalbum">
+                <article class="jsdalbum">
+                    <img src="" alt="" class="fotoj"> 
+                </article>
+                <article class= "jsdalbum2">
+                    <h2 class = "title"> Album: </h2>
+                    <h2 class = "artist"> Artista: </h2>
+                    <h2 class = "genre"> Genero: </h2>
+                    <h2 class = "date"> Date: </h2>
+                </article>
+            </section>
+           
             <ul class = "tracks">
             
             </ul>
