--- a/detail-genres.html
+++ b/detail-genres.html
@@ -38,8 +38,11 @@
             <h1 class="pag"></h1>
             <img class="fotoaa"></img>
 
-            <ol class="artistasg">
-            </ol>
+            <ul class="artistasg">
+            </ul>
+            <ul class="topalbumss">
+
+            </ul>
         </section>
     </main> 
     <footer class="responsivefooter">
