--- a/detail-artist.html
+++ b/detail-artist.html
@@ -38,6 +38,9 @@
             <h1> <a href="https://www.instagram.com/justinbieber/" class="instagramj"></a></h1>
             <img src="" alt="" class="fotoj"> 
             <p></p>
+            <ul class="topalbumss">
+
+            </ul>
         </section>
     </main>
     <footer class="responsivefooter">
