--- a/detail-genres.html
+++ b/detail-genres.html
@@ -35,12 +35,19 @@
     </header>
     <main>
         <section class="detallegenero">
-            <h1 class="pag"></h1>
-            <img class="fotoaa"></img>
+            <section class="dgenero">
+            <article class="jsdgenero">
+                <img class="fotoaa"></img>
+            </article>
+            <article class="jsdgenero2">
+                <h1 class="pag"></h1>
+            </article>
+        </section>
+           
 
-            <ul class="artistasg">
+            <ul class="listas">
             </ul>
-            
+
         </section>
     </main> 
     <footer class="responsivefooter">
