--- a/detail-track.html
+++ b/detail-track.html
@@ -38,13 +38,13 @@
             <h2 class="track"> </h2> 
             <img class="fotoaa"></img>
        
-                <h3 >Artista:<a href="./detail-artist.html" class="names"> </a></h3>
+                <h3>Artista: <a href="./detail-artist.html" class="names"> </a></h3>
                 <h3>Álbum: <a href="./detail-album.html" class="instajustin"> </a></h3>
-                <h3><iframe title="deezer-widget" src="" width="100%" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media; clipboard-write"></iframe></h3>
-                <h3>
+                <h3><iframe title="deezer-widget" src="" width="100%" height="50" frameborder="0" allowtransparency="true" allow="encrypted-media; clipboard-write"></iframe></h3>
+                <article class= "botonesplaylist">
                     <a class="names agregar" href="./playlists.html"> Agregar a mí playlist</a>
                     <a class="names" href="./playlists.html">Ver Playlist</a>
-                    </h3>
+                </article>
            
         </section>
     </main>
