--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                                <a href="perfil.html"><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
                             </article> 
                             <form action="search-results.html" method="GET" class="buscar">
-                               <input type="text" name="search" placeholder = "¿Qué estás buscando?">
+                               <input type="text" name="search" placeholder="¿Qué estás buscando?" value="">
                                <button type="submit" class="button">Buscar</button>
                                <p class= "aviso"></p>
                             </form>
