jus detailalbum falta q te mande a detail artist pero hay un error

--- a/detail-album.html
+++ b/detail-album.html
@@ -40,10 +40,10 @@
                     <img src="" alt="" class="fotoj"> 
                 </article>
                 <article class= "jsdalbum2">
-                    <h2 class = "title"> Album: </h2>
-                    <h2 class = "artist"> Artista: </h2>
-                    <h2 class = "genre"> Genero: </h2>
-                    <h2 class = "date"> Date: </h2>
+                    <h2>Album: <a href="" class = "title"></a></h2>
+                    <h2>Artista: <a href="detail-artist.html" class = "artist"></a></h2>
+                    <h2>Género: <a href="detail-genres.html" class = "genre"></a></h2>
+                    <h2>Lanzamiento: <a href="" class = "date"></a></h2>
                 </article>
             </section>
            
