--- a/detail-artist.html
+++ b/detail-artist.html
@@ -35,11 +35,11 @@
     </header>
     <main>
         <section class="detalleartista">
-            <h1> <a href="https://www.instagram.com/justinbieber/" class="instagramj"></a></h1>
+            <h1 class="extra"> <a href="https://www.instagram.com/justinbieber/" class="instagramj"></a></h1>
             <img src="" alt="" class="fotoj"> 
             <p></p>
-            <ul class="topalbumss">
-
+            <ul class="topalbumss"> 
+                <p class= "extra">TOP ALBUMS: </p>
             </ul>
         </section>
 
