--- a/detail-track.html
+++ b/detail-track.html
@@ -35,9 +35,9 @@
     </header>
     <main>
         <section class="detallestrack">
-                <h2> Canción: <a href="" class="track"> </a></h2> 
-                <h3>Artista: <a href="./detail-artist.html" class="names"> </a></h3>
-                <h3>Álbum: <a href="./detail-album.html" class="instajustin"> </a></h3>
+                <h2 class= "extra"> Canción: <a href="" class="track"> </a></h2> 
+                <h3 class= "extra">Artista: <a href="./detail-artist.html" class="names"> </a></h3>
+                <h3 class= "extra">Álbum: <a href="./detail-album.html" class="instajustin"> </a></h3>
                 <img class="fotoaa"></img>
                 <p><a class="namesagregar" href="">Agregar a mí playlist</a></p>
                 <p><a class="names" href="playlists.html">Ver Playlist</a></p>
