--- a/detail-track.html
+++ b/detail-track.html
@@ -35,17 +35,20 @@
     </header>
     <main>
         <section class="detallealbum">
-            <section class="jsdalbum2">
-                <h2 class= "extra"> Canción: <a href="" class="track"> </a></h2> 
-                <h3 class= "extra">Artista: <a href="./detail-artist.html" class="names"> </a></h3>
-                <h3 class= "extra">Álbum: <a href="./detail-album.html" class="instajustin"> </a></h3>
+            <section class= "dalbum">
+                <article class="jsdalbum">
+                    <img class="fotoaa"></img>
+                </article>
+                <article class= "jsdalbum2">
+                    <h2 class= "extra"> Canción: <a href="" class="track"> </a></h2> 
+                    <h3 class= "extra">Artista: <a href="./detail-artist.html" class="names"> </a></h3>
+                    <h3 class= "extra">Álbum: <a href="./detail-album.html" class="instajustin"> </a></h3>
+                    <p><a class="namesagregar" href="">Agregar a mí playlist</a></p>
+                    <p><a class="names" href="playlists.html">Ver Playlist</a></p>
+                </article>
+                <h2 class="player2"></h2>
             </section>
-            <section class="jsdalbum">
-                <img class="fotoaa"></img>
-            </section>
-                <h2 class="player"></h2>
-                <p><a class="namesagregar" href="">Agregar a mí playlist</a></p>
-                <p><a class="names" href="playlists.html">Ver Playlist</a></p>
+        
         </section>
     </main>
     <footer class="responsivefooter">
