--- a/detail-track.html
+++ b/detail-track.html
@@ -46,9 +46,8 @@
                     <p><a class="namesagregar" href="">Agregar a mí playlist</a></p>
                     <p><a class="names" href="playlists.html">Ver Playlist</a></p>
                 </article>
-                <h2 class="player2"></h2>
             </section>
-        
+            <h2 class="player"></h2>
         </section>
     </main>
     <footer class="responsivefooter">
