--- a/detail-album.html
+++ b/detail-album.html
@@ -57,6 +57,7 @@
         <section class="footer">
             <article class="seguinos">
                 <a href="https://www.instagram.com/soundnow_/"><img src="./img/insta.png" alt="instagram" class="instagram"></a>
+                <a href="https://www.deezer.com/mx/"><img src="./img/Captura de Pantalla 2021-06-22 a la(s) 10.16.54.png" alt="instagram" class="otraclase"></a>
             </article>
             <article class="nombre"> 
                 <p>Hania Achaval, Justina Basombrio, Malena Bensadon </p>
