--- a/search-results.html
+++ b/search-results.html
@@ -36,7 +36,8 @@
     <main>
         <section class="section5">
             <article class="oops">
-                
+                <h2 class= "tito">Oops! No se encontaron resultados para tu búsqueda</h2>
+                <h2 class="tito">Búsqueda relacionada:</h2>
             </article>
             
             <ul class="detailx">
