--- a/detail-genres.html
+++ b/detail-genres.html
@@ -48,6 +48,7 @@
             
             </article>
         </section>
+        <p class="pag">Estos son los mejores artistas del genero:</p>
            
 
             <ul class="listas">
