--- a/search-results.html
+++ b/search-results.html
@@ -34,6 +34,7 @@
         </section>
     </header>
     <main>
+        </section>
         <section class="section5">
             <article class="oops">
             
