--- a/search-results.html
+++ b/search-results.html
@@ -48,7 +48,7 @@
             <section class="resdebus7">
 
                 <article class="tracks">
-                    <a href="perfil.html" class="titulos">CANCIONES</a>
+                    <a href="canciones.html" class="titulos">CANCIONES</a>
                     <ul class="resultadosTracks"> 
                     </ul>
                 </article>
